# novel-dev

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  embedding_server.py  install.sh  llm_config.yaml  novel_dev.db  pyproject.toml
.claude/: settings.local.json
migrations/: env.py
migrations/versions/: 20260416_0a5d18f684cf_initial_schema.py  20260417_815fd4566d43_enable_pgvector.py  20260417_a198e260c3bf_add_novel_id_to_entities_timeline_.py  20260417_cbff13937f2d_fix_timeline_tick_unique.py  20260418_05af082fea75_add_chapter_novel_id_and_vector_.py  20260418_5496bbb8d0df_add_entity_vector_embedding.py  20260418_8a7c3e5f1d2a_add_hnsw_vector_indexes.py  20260418_a073a208ff9b_merge_branches.py  20260418_eaf5a79edc90_add_pending_extractions_table.py  20260418_f2a3b4c5d6e7_add_novel_id_to_entity_relationship.py  20260420_097b728b9fa0_merge_three_heads.py  20260420_add_pending_extraction_diff_result.py  20260420_add_pending_extraction_resolution_result.py  20260421_add_entity_classification_and_search_fields.py  20260421_add_outline_workbench_sessions.py  20260421_add_source_filename_to_pending_extractions.py  20260422_add_brainstorm_workspace.py  20260423_add_brainstorm_suggestion_cards.py  (+13 more)
scripts/: README.md  measure_llm_orchestrator_ab.py  run_local.sh  start-embedding-server.sh  verify_generation_real.sh  verify_local.sh  verify_web_e2e.sh
tests/: conftest.py  test_config.py  test_embedding_server.py  test_integration_chapter_flow.py  test_integration_end_to_end.py  test_integration_setting_style_flow.py  test_mcp_server.py  test_mcp_server_stdio.py
(+713 files in other folders)
